--- a/node-red-contrib-s7_axioma/red/s7.html
+++ b/node-red-contrib-s7_axioma/red/s7.html
@@ -1086,7 +1086,7 @@
 				value: ""
 			}
 		},
-		color: "#B53FAD",
+		color: "#3FADB5",
 		inputs: 0,
 		outputs: 1,
 		icon: "serial.png",
@@ -1240,7 +1240,7 @@
 				value: ""
 			}
 		},
-		color: "#B53FAD",
+		color: "#3FADB5",
 		inputs: 1,
 		outputs: 0,
 		icon: "serial.png",
@@ -1377,7 +1377,7 @@
 				value: ""
 			}
 		},
-		color: "#B53FAD",
+		color: "#3FADB5",
 		inputs: 1,
 		outputs: 1,
 		icon: "serial.png",
@@ -1429,7 +1429,7 @@
 				value: ""
 			}
 		},
-		color: "#B53FAD",
+		color: "#3FADB5",
 		inputs: 1,
 		outputs: 1,
 		icon: "serial.png",
@@ -1482,7 +1482,7 @@
 				value: ""
 			}
 		},
-		color: "#B53FAD",
+		color: "#3FADB5",
 		inputs: 1,
 		outputs: 1,
 		icon: "serial.png",
